<resources>
    <string name="app_name">FarmaTom</string>
    <string name="titulo_inicial">Complete el formulario: </string>
    <string name="nombre">Ingrese su Nombre</string>
    <string name="passwd">Ingrese su Contraseña</string>
    <string name="rep_passwd">Ingrese Nuevamente su Contraseña</string>
    <string name="mail">Ingrese su Correo Electrónico</string>
    <string name="term_cond">Acepto los términos y condiciones</string>
    <string name="registrar">Confirmar Usuario</string>
    <string name="tituloNuevoPedido">Encargar Medicamento</string>
    <string name="correoNuevoPedido">Ingrese su correo electronico</string>
    <string name="direccionNuevoPedido">Ingrese la dirección de destino</string>
    <string name="tipoNuevoPedido">Tipo de pedido</string>
    <string name="envioNuevoPedido">Envío</string>
    <string name="takeawayNuevoPedido">Take Away</string>
    <string name="btnAgregarUbicacion">AGREGAR UBICACIÓN ACTUAL</string>
    <string name="listadoNuevoPedido">Ver Medicamentos</string>
    <string name="tituloListadoNuevoPedido">Medicamento a pedir:</string>
    <string name="totalNuevoPedido">Total del pedido: $</string>
    <string name="guardarNuevoPedido">Realizar Pedido</string>
    <string name="tituloNuevoMedicamento">Nuevo Medicamento</string>
    <string name="titulo">Título</string>
    <string name="descripcionNuevoMedicamento">Descripción del Medicamento</string>
    <string name="precioNuevoMedicamento">Precio</string>
    <string name="miligramosNuevoMedicamento">Miligramos</string>
    <string name="guardarNuevoMedicamento">Guardar Medicamento</string>
    <string name="mailCorrecto">[a-zA-Z0-9._-]+@[a-z]+\\.[a-z]+</string>

    <string name="unidades">Unidades:</string>
    <string name="agregar"> Agregar</string>

    <!--GOOGLE MAPS KEY-->
    <string name="google_maps_key">AIzaSyCwnzigaCp81wFuEa4ySBdOymmWEqoOg8A</string>
    <string name="buscar_en_galeria">Buscar en galeria</string>
    <string name="sacar_foto">Sacar foto</string>
    <string name="todo">TODO</string>
    <string name="pesos">$</string>
    <string name="limite_caracteres">Ha alcanzado el límite de caracteres.</string>
    <string name="contador">0 / 35</string>
    <string name="bienvenido_a_farmatom">Bienvenido a FarmaTom</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="no_tiene_cuenta">¿No tiene cuenta?</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="precio">Precio: $</string>
    <string name="miligramos">Miligramos:</string>
    <string name="descripcion">Descripción:</string>
    <string name="confirmar_ubicacion">Confirmar Ubicacion</string>
    <string name="cargar_medicamento">Cargar Medicamento</string>
    <string name="realizar_pedido">Realizar Pedido</string>
    <string name="listado_medicamentos">Listado Medicamentos</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

</resources>